# starked-education

./: .env.example  README.md  package.json
backend/: README.md  package.json
backend/src/: index.js
contracts/: Cargo.toml  eventLogger.md
contracts/scripts/: deploy_courseMetadata.js  deploy_userProfile.js  device_registration.js
contracts/src/: InstallPrompt.tsx  deploy_eventLogger.js  deploy_progress.js  eventLogger_test.rs  lib.rs  manifest.json  sw.js
frontend/: package.json
frontend/src/pages/: notifications-demo.tsx
